<?xml version="1.0"?>
<package format="2">
    <name>engineer_middleware</name>
    <version>0.1.0</version>
    <description>A template for ROS packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>rm_common</depend>
    <depend>control_toolbox</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <exec_depend>moveit_servo</exec_depend>
    <exec_depend>moveit_plugins</exec_depend>

    <build_depend>roslint</build_depend>
</package>
